--- a/package.json
+++ b/package.json
@@ -164,7 +164,7 @@
     "mocha": "^8.1.1",
     "multidep": "2.0.2",
     "ng-mocks": "^14.1.1",
-    "ng-packagr": "^14.2.2",
+    "ng-packagr": "15.2.2",
     "ng2-mock-component": "^0.1.1",
     "ngx-device-detector": "^1.3.0",
     "nyc": "^13.0.1",
