--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "7.0.37",
+  "version": "7.0.38",
   "engines": {
     "node": ">=18.17.0"
   },
@@ -75,7 +75,7 @@
     "govuk-frontend": "^4.2.0",
     "json-server": "^0.15.1",
     "lz-string": "^1.5.0",
-    "marked": "^0.7.0",
+    "marked": "^12.0.0",
     "mem": "^6.0.0",
     "minimist": "1.2.3",
     "moment": "^2.29.1",
@@ -164,7 +164,7 @@
     "mocha": "^8.1.1",
     "multidep": "2.0.2",
     "ng-mocks": "^14.1.1",
-    "ng-packagr": "^14.2.2",
+    "ng-packagr": "15.2.2",
     "ng2-mock-component": "^0.1.1",
     "ngx-device-detector": "^1.3.0",
     "nyc": "^13.0.1",
