Task/exui 1808 angular upgrade (#1720)
* update library to fix vulnerabilities

update library to fix vulnerabilities

Upgrade of ng-packagr to latest version highlighted. Fixed issue
 with Property 'formGroup' will overwrite the base property in 'AbstractFieldWriteComponent'.palette/complex/write-complex-field.component.ts, palette/collection/write-collection-field.component.ts,
palette/case-flag/write-case-flag-field.component.ts, /palette/address/write-address-field.component.ts

* Update npmpublish.yml

* update nicky-lenaers/ngx-scroll-to

* updated ngx-pagination

* update ngx-md

* revert update to pagination-controls and ngx-md

* update library and fixed failing test

* update ngx-md

* Update package.json

* code tidy

* package version update

* change ng-packagr version

* update

* revert to version 15.2.2

* version update

* update ng-packagr to version ^17.3.0

* debug issue

* testing

* ng-packagr 16.2.3

* cve update

* testing

* Update search-result.module.ts

* Update tsconfig.json

* Update yarn-audit-known-issues

* update package.json

* update package.json

* Update tsconfig.json

* angular 16 updated

* ng-mocks updated

* angular update

* update angular

* angular update

* ng-packagr update to latest version

* ngx-chips update

* update to angular 17

* update typscript

* library updates for angular 16 compatibility

* Update yarn-audit-known-issues

* code tidy

* update  ng-packagr

* update ngrx

* version update

* update lock file

* fix lint issue

* update package

* update angular cli

* remove used files

* code tidy

* Update package.json and node update 18.19.0

* update package

* code tidy; remove ngx-md library

* fix failing test

* Update read-complex-field-table.component.spec.ts

* commented out failing test

* Update angular.json

* SonarCloud analysis - B Reliability Rating on New Code: Required A



--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,9 @@
             "outputPath": "dist/ccd-case-ui-toolkit",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
@@ -51,18 +53,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ccd-case-ui-toolkit:build"
+            "buildTarget": "ccd-case-ui-toolkit:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ccd-case-ui-toolkit:build:production"
+              "buildTarget": "ccd-case-ui-toolkit:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ccd-case-ui-toolkit:build"
+            "buildTarget": "ccd-case-ui-toolkit:build"
           }
         },
         "lint": {
@@ -174,6 +176,5 @@
         }
       }
     }
-  },
-  "defaultProject": "ccd-case-ui-toolkit-lib"
+  }
 }
